- Endpoint para adicionar ExpenseType - Configuração automática de repositorios - Extension para aplicar filtros de query

--- a/ExpenseService.Buiseness/ExpenseService.Buiseness.csproj
+++ b/ExpenseService.Buiseness/ExpenseService.Buiseness.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Expense.Service.Domain\ExpenseService.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCases\ExpenseTypes\Queries\" />
+  </ItemGroup>
+
 </Project>
